2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/loop.c,
	  support/regression/tests/gcc-torture-execute-20010409-1.c:
	  Disable tests that rely on asm-implemented longjmp.

2021-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3231.c:
	  Fix bug #3231.

2021-05-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3230.c:
	  Fix bug #3230.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bug-3229.c:
	  Fix bug #3229.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix some bugs triggered by return values in other than the conventional registers.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a bug in handling of return values in bc.
	* device/lib/clean.mk:
	  Fix clean for r2ka library.

2021-05-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.h,
	  src/stm8/gen.c,
	  src/stm8/peep.c,
	  src/z80/gen.h,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Deduplicate return value handling in peephole optimizer vs code generation.

2021-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/z88dk_callee.c
	  Adapt test for ds390.

2021-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Code clenaup.

2021-05-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3223.c:
	  Fix bug #3223.

2021-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/main.c,
	  doc/sdccman.lyx,
	  .version,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/tests/z88dk_callee.c:
	  __z88dk_callee support for stm8.

2021-05-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  doc/sdccman.lyx,
	  .version,
	  support/regression/tests/z88dk.c,
	  support/regression/tests/z88dk_callee.c:
	  Implement __z88dk_callee support on callee side.
